# researcher

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: claude-review.yml  quality.yml
configs/data_sources/: binance.yaml
configs/experiments/: ma_cross_btc_1h_monthly.yaml
src/trading_research/: __init__.py  config.py  domain.py  hashing.py
src/trading_research/analytics/: __init__.py
src/trading_research/backtest/: __init__.py  engine.py  fees.py  metrics.py  orders.py  portfolio.py  position.py  risk.py  sizing.py  slippage.py
src/trading_research/cli/: main.py
src/trading_research/data/: __init__.py  schema.py
src/trading_research/experiments/: __init__.py  grid_search.py  random_search.py  time_splitters.py
src/trading_research/features/: __init__.py
src/trading_research/strategies/: __init__.py  base.py  ma_cross.py
tests/: test_backtest_engine.py  test_binance_client.py  test_config.py  test_fees_slippage.py  test_fill_timing.py  test_hashing.py  test_metrics.py  test_param_search.py  test_parquet_store.py  test_risk.py  test_strategy_signals.py  test_time_splitters.py
tickets/: AN-1.md  AN-2.md  AN-3.md  AN-4.md  AN-5.md  BT-1.md  BT-2.md  BT-3.md  BT-4.md  BT-5.md  BT-6.md  BT-7.md  BT-8.md  DATA-1.md  DATA-2.md  DATA-3.md  DATA-4.md  DATA-5.md  DATA-6.md  EXP-1.md  EXP-2.md  EXP-3.md  EXP-4.md  EXP-5.md  EXP-6.md  INF-1.md  INF-2.md  INF-3.md  INF-4.md  README.md  REG-1.md  REG-2.md  REG-3.md  WF-1.md  WF-2.md  WF-3.md
(+4 files in other folders)
