[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trading-research"
version = "0.0.1"
description = "Research platform for finding and backtesting optimal trading-strategy configurations across time slices and market regimes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "polars>=1.0",
    "duckdb>=1.0",
    "pyarrow>=16.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff==0.15.20",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
]

[project.scripts]
trading-research = "trading_research.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_research"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["trading_research"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["trading_research"]

[tool.coverage.report]
show_missing = true
